// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField matches snapshot with minimal props 1`] = `
<DocumentFragment>
  <div
    class="select-field"
  >
    <label
      for="Test"
    >
      Test
    </label>
    <div
      class="select-field-inner"
    >
      <div
        class="input-select-inner css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          class="select-inner__control css-13cymwt-control"
        >
          <div
            class="select-inner__value-container css-hlgwow"
          >
            <div
              class="select-inner__placeholder css-1jqq78o-placeholder"
              id="react-select-2-placeholder"
            />
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-describedby="react-select-2-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              aria-readonly="true"
              class="css-1s80ejz-dummyInput-DummyInput"
              id="react-select-2-input"
              inputmode="none"
              role="combobox"
              tabindex="0"
              value=""
            />
          </div>
          <div
            class="select-inner__indicators css-1wy0on6"
          >
            <span
              class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectField matches snapshot with options 1`] = `
<DocumentFragment>
  <div
    class="select-field"
  >
    <label
      for="Test"
    >
      Test
    </label>
    <div
      class="select-field-inner"
    >
      <div
        class="input-select-inner css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          class="select-inner__control css-13cymwt-control"
        >
          <div
            class="select-inner__value-container css-hlgwow"
          >
            <div
              class="select-inner__placeholder css-1jqq78o-placeholder"
              id="react-select-3-placeholder"
            />
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-describedby="react-select-3-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              aria-readonly="true"
              class="css-1s80ejz-dummyInput-DummyInput"
              id="react-select-3-input"
              inputmode="none"
              role="combobox"
              tabindex="0"
              value=""
            />
          </div>
          <div
            class="select-inner__indicators css-1wy0on6"
          >
            <span
              class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
